[gd_scene load_steps=11 format=3 uid="uid://dg07wbh4u6m8e"]

[ext_resource type="Script" path="res://scenes/entities/player/ui.gd" id="1_57myg"]
[ext_resource type="Texture2D" uid="uid://brmvrdvescwvv" path="res://art/ui/over.png" id="1_al8fa"]
[ext_resource type="Texture2D" uid="uid://bx36on47ak7vk" path="res://art/ui/progress1.png" id="2_mykxp"]
[ext_resource type="Texture2D" uid="uid://h5qd7eplecgj" path="res://art/ui/progress2.png" id="3_6ce2y"]
[ext_resource type="Texture2D" uid="uid://cskcc71jcscjq" path="res://art/ui/icons/grapple1.png" id="5_cb6oy"]
[ext_resource type="Texture2D" uid="uid://m0dcljcb6osg" path="res://art/ui/icons/ult1_1.png" id="6_iexwv"]
[ext_resource type="Texture2D" uid="uid://5l1h7o4dp3kd" path="res://art/ui/icons/grapple3.png" id="7_7m5gs"]
[ext_resource type="Texture2D" uid="uid://catoanifqyatw" path="res://art/ui/icons/ult2_1.png" id="7_73cpg"]
[ext_resource type="Texture2D" uid="uid://pxyy6gpb3bjx" path="res://art/ui/icons/ult1_3.png" id="9_lgc42"]
[ext_resource type="Texture2D" uid="uid://c5rvmt5a5w3w4" path="res://art/ui/icons/ult2_3.png" id="10_sld1n"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_57myg")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 138.0
offset_bottom = 72.0
scale = Vector2(4.5, 4.5)
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Bars" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="HealthBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/Bars"]
layout_mode = 2
value = 45.0
texture_over = ExtResource("1_al8fa")
texture_progress = ExtResource("2_mykxp")
texture_progress_offset = Vector2(20, 3)

[node name="EnergyBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer/Bars"]
layout_mode = 2
value = 50.0
texture_progress = ExtResource("3_6ce2y")
texture_progress_offset = Vector2(28, 17)

[node name="Icons" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Icons"]
layout_mode = 2
alignment = 1

[node name="GrappleIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/Icons/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_cb6oy")

[node name="Ult1Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/Icons/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_iexwv")

[node name="Ult2Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/Icons/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_73cpg")

[node name="Icons2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Icons2"]
layout_mode = 2
alignment = 1

[node name="GrappleIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/Icons2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_7m5gs")

[node name="Ult1Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/Icons2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("9_lgc42")

[node name="Ult2Icon" type="TextureRect" parent="MarginContainer/VBoxContainer/Icons2/HBoxContainer"]
layout_mode = 2
texture = ExtResource("10_sld1n")
